--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.2.2",
     "chroma-js": "^2.4.2",
@@ -16,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-spinner-material": "^1.4.0",
     "styled-components": "^5.3.6",
