--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-spinner-material": "^1.4.0",
     "styled-components": "^5.3.6",
     "styled-normalize": "^8.0.7",
+    "terraformer-wkt-parser": "^1.2.1",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
